--- a/index.html
+++ b/index.html
@@ -1,141 +1,230 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Interlay-Modular-Kitchen</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/style.css">
-  </head>
-  <body>
-    <header>
-        <nav class="navbar navbar-expand-lg p-0">
-            <div class="container">
-              <a class="navbar-brand" href="#">
-                <img src="Images/interlay-logo.png"  alt="">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav  mb-lg-0">
-                  <li class="nav-item mx-3">
-                    <a class="nav-link" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item mx-3">
-                    <a class="nav-link" href="#">About</a>
-                  </li>
-                  <li class="nav-item mx-3">
-                    <a class="nav-link" href="">Gallery</a>
-                  </li>
-                  <li class="nav-item mx-3">
-                    <a class="nav-link" href="">Pricing</a>
-                  </li>
-                  <li class="nav-item mx-3">
-                    <a class="nav-link" href="">FAQ's</a>
-                  </li>
-                  <li class="nav-item mx-3">
-                    <button><a href="">Enquire Now</a></button>
-                  </li>
-                </ul>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Interlay-Modular-Kitchen</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="CSS/style.css">
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg p-0">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="Images/interlay-logo.png" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav  mb-lg-0">
+            <li class="nav-item mx-3">
+              <a class="nav-link" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link" href="">Gallery</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link" href="">Pricing</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link" href="">FAQ's</a>
+            </li>
+            <li class="nav-item mx-3">
+              <button><a href="">Enquire Now</a></button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="banner">
+      <div class="container">
+        <h1>Welcome to Interlay Interiors </h1>
+        <p>Your Premier Destination for Modular Kitchen Solutions in Jaipur.</p>
+        <button><a href="">Enquire Now</a></button>
+      </div>
+    </section>
+
+    <section class="about-me py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h6>INTERLAY INTERIORS</h6>
+            <h2>About Interlay Interiors:</h2>
+            <p>At Interlay Interiors, we pride ourselves on being Jaipur's leading exquisite modular kitchen solutions
+              provider. With years of experience and a passion for design excellence, we specialize in crafting kitchens
+              that blend functionality with aesthetics seamlessly. Our expert designers and craftsmen are dedicated to
+              transforming your culinary space into a haven of style and efficiency.</p>
+            <button><a href="">Contact Now</a></button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="types py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h6>INTERLAY INTERIORS</h6>
+            <H2>Types of Modular Kitchen</H2>
+          </div>
+          <div class="col-lg-12 col-12">
+            <div class="img-accordion" data-aos="fade-up" data-aos-delay="250" data-aos-duration="800">
+              <div class="img img1">
+                <p>Inline Modular Kitchen</p>
+              </div>
+              <div class="img img2">
+                <p>L- Shape Modular Kitchen</p>
+              </div>
+              <div class="img img3">
+                <p>Island Modular Kitchen</p>
+              </div>
+              <div class="img img4">
+                <p>Parallel Modular Kitchen</p>
+              </div>
+              <div class="img img5">
+                <p>U- Shape Modular Kitchen</p>
+              </div>
+              <div class="img img6">
+                <p>Peninsular Modular Kitchen</p>
               </div>
             </div>
-          </nav>
-    </header>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <main>
-        <section class="banner">
-            <div class="container">
-                <h1>Top Rated Modular Kitchen in Jaipur, Rajasthan</h1>
-                <p>Discover the delight of cooking in a kitchen that authentically mirrors your style. Interlay is the most trusted Modular Kitchen Dealer in Jaipur that enhance your everyday experience.</p>
-                <button><a href="">Know More</a></button>
+    <section class="gallery">
+      <div class="sub-foot">
+        <div class="container-fluid">
+          <h6>INTERLAY INTERIORS</h6>
+          <h2 class="pb-3 text-center">Our Works</h2>
+          <div class="logos">
+            <div class="logos-slide">
+              <img src="Images/actual-site-1.jpg" />
+              <img src="Images/actual-site-2.jpg" />
+              <img src="Images/actual-site-3.jpg" />
+              <img src="Images/actual-site-4.jpg" />
+              <img src="Images/actual-site-5.jpg" />
+              <img src="Images/actual-site-6.jpg" />
+              <img src="Images/actual-site-7.jpg" />
+              <img src="Images/actual-site-8.jpg" />
             </div>
-        </section>
 
-        <section class="about-me py-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 text-center">
-                        <h6>INTERLAY INTERIORS</h6>
-                        <h2>Discover the Best Modular Kitchen in Jaipur with Interlay Interiors!</h2>
-                        <p>Indulge in a culinary journey unlike any other with Interlay Interiors, where the best modular kitchen in Jaipur await your discovery. For over 12 remarkable years, our passion for crafting exquisite kitchen spaces has defined our journey. From humble beginnings to becoming a beacon of innovation and quality, Interlay Interiors has consistently redefined kitchen aesthetics, offering the finest modular solutions in Jaipur. With a keen eye for detail and a commitment to elevating lifestyles, our designs blend style and functionality, ensuring that each kitchen reflects our clients’ unique tastes while enhancing their daily lives. Step into our world and experience kitchen elegance with Interlay Interiors’ unparalleled expertise in Jaipur’s best modular kitchen.</p>
-                        <button><a href="">Contact Now</a></button>
-                    </div>
+            <div class="logos-slide">
+              <img src="Images/actual-site-1.jpg" />
+              <img src="Images/actual-site-2.jpg" />
+              <img src="Images/actual-site-3.jpg" />
+              <img src="Images/actual-site-4.jpg" />
+              <img src="Images/actual-site-5.jpg" />
+              <img src="Images/actual-site-6.jpg" />
+              <img src="Images/actual-site-7.jpg" />
+              <img src="Images/actual-site-8.jpg" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="pricing py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>Average price of Modular Kitchen in Jaipur</h2>
+            <p>The average cost of a modular kitchen in Jaipur varies depending on factors such as size, materials used, and design preferences. However, it typically ranges from INR 1.5 lakhs to INR 4 lakhs or more for high-end designs.</p>
+            <p><strong>For precise pricing and expert assistance, consider reaching out to Interlay Interiors. We specialize in creating custom modular kitchens in Jaipur tailored to your specific requirements.</strong></p>
+            <div class="d-flex justify-content-center">
+              <button><a href="">Know More</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="faq py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2>Frequently Asked Questions</h2>
+          </div>
+          <div class="col-12">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    What are the benefits of choosing a modular kitchen?
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <p><strong>Modular kitchens offer flexibility in design, efficient use of space, and ease of maintenance compared to traditional kitchens.</strong></p>
+                  </div>
                 </div>
-            </div>
-        </section>
-
-        <section class="types py-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h6>INTERLAY INTERIORS</h6>
-                        <H2>Types of Modular Kitchen</H2>
-                        <p>Interlay Interiors has a variety of modular kitchen designs. Each kitchen in a home is a different size, so they must accommodate these differences. They can be customized in color, design, and placement, as we have already mentioned.</p>
-                    </div>
-                    <div class="col-lg-12 col-12">
-                        <div class="img-accordion" data-aos="fade-up" data-aos-delay="250" data-aos-duration="800">
-                            <div class="img img1">
-                                <p>Inline Modular Kitchen</p>
-                            </div>
-                            <div class="img img2">
-                                <p>L- Shape Modular Kitchen</p>
-                            </div>
-                            <div class="img img3">
-                                <p>Island Modular Kitchen</p>
-                            </div>
-                            <div class="img img4">
-                                <p>Parallel Modular Kitchen</p>
-                            </div>
-                            <div class="img img5">
-                                <p>U- Shape Modular Kitchen</p>
-                            </div>
-                            <div class="img img6">
-                                <p>Peninsular Modular Kitchen</p>
-                            </div>
-                        </div>
-                    </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    How long does it take to install a modular kitchen?
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <p><strong>The installation time varies depending on the size and complexity of the project. However, our team at Interlay Interiors strives to complete installations promptly without compromising on quality.</strong></p>
+                  </div>
                 </div>
-            </div>
-        </section>
-
-        <section class="gallery pb-5">
-            <div class="sub-foot">
-                <div class="container-fluid">
-                    <h6>INTERLAY INTERIORS</h6>
-                    <h2 class="pb-3 text-center">Our Works</h2>
-                    <div class="logos">
-                        <div class="logos-slide">
-                            <img src="Images/actual-site-1.jpg" />
-                            <img src="Images/actual-site-2.jpg" />
-                            <img src="Images/actual-site-3.jpg" />
-                            <img src="Images/actual-site-4.jpg" />
-                            <img src="Images/actual-site-5.jpg" />
-                            <img src="Images/actual-site-6.jpg" />
-                            <img src="Images/actual-site-7.jpg" />
-                            <img src="Images/actual-site-8.jpg" />
-                        </div>
-    
-                        <div class="logos-slide">
-                            <img src="Images/actual-site-1.jpg" />
-                            <img src="Images/actual-site-2.jpg" />
-                            <img src="Images/actual-site-3.jpg" />
-                            <img src="Images/actual-site-4.jpg" />
-                            <img src="Images/actual-site-5.jpg" />
-                            <img src="Images/actual-site-6.jpg" />
-                            <img src="Images/actual-site-7.jpg" />
-                            <img src="Images/actual-site-8.jpg" />
-                        </div>
-                    </div>
-    
-                    <!-- <div class="d-flex justify-content-center mt-3">
-                        <button><a href="https://www.instagram.com/mitesh.khatri_?igsh=MTJxZDJsOTc5ZmppMA==" target=”_blank”>View More</a></button>
-                    </div> -->
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Can I customize my modular kitchen design?
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <p><strong>Absolutely! We understand that every client has unique preferences and requirements. Our designers work closely with you to create a customized modular kitchen design that reflects your personal style and meets your specific needs.</strong></p>
+                  </div>
                 </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+                    Can I customize my modular kitchen design?
+                  </button>
+                </h2>
+                <div id="collapsefour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <p><strong>Absolutely! We understand that every client has unique preferences and requirements. Our designers work closely with you to create a customized modular kitchen design that reflects your personal style and meets your specific needs.</strong></p>
+                  </div>
+                </div>
+              </div>
             </div>
-        </section>
-    </main>
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="text-center">
+    <div class="py-1 d-flex justify-content-center align-items-center">
+      <p>@2024 Interlay, All Rights Reserved</p>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
