--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <p><strong>Modular kitchens offer flexibility in design, efficient use of space, and ease of maintenance compared to traditional kitchens.</strong></p>
+                    <p>Modular kitchens offer flexibility in design, efficient use of space, and ease of maintenance compared to traditional kitchens.</p>
                   </div>
                 </div>
               </div>
@@ -180,7 +180,7 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <p><strong>The installation time varies depending on the size and complexity of the project. However, our team at Interlay Interiors strives to complete installations promptly without compromising on quality.</strong></p>
+                    <p>The installation time varies depending on the size and complexity of the project. However, our team at Interlay Interiors strives to complete installations promptly without compromising on quality.</p>
                   </div>
                 </div>
               </div>
@@ -192,7 +192,7 @@
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <p><strong>Absolutely! We understand that every client has unique preferences and requirements. Our designers work closely with you to create a customized modular kitchen design that reflects your personal style and meets your specific needs.</strong></p>
+                    <p>Absolutely! We understand that every client has unique preferences and requirements. Our designers work closely with you to create a customized modular kitchen design that reflects your personal style and meets your specific needs.</p>
                   </div>
                 </div>
               </div>
@@ -204,7 +204,7 @@
                 </h2>
                 <div id="collapsefour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <p><strong>Absolutely! We understand that every client has unique preferences and requirements. Our designers work closely with you to create a customized modular kitchen design that reflects your personal style and meets your specific needs.</strong></p>
+                    <p>Absolutely! We understand that every client has unique preferences and requirements. Our designers work closely with you to create a customized modular kitchen design that reflects your personal style and meets your specific needs.</p>
                   </div>
                 </div>
               </div>
