Just-looking-Like-a-Wow

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section class="about-me py-5">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div class="col-lg-7 col-12">
             <h6>INTERLAY INTERIORS</h6>
             <h2>About Interlay Interiors:</h2>
             <p>At Interlay Interiors, we pride ourselves on being Jaipur's leading exquisite modular kitchen solutions
@@ -68,15 +68,18 @@
               transforming your culinary space into a haven of style and efficiency.</p>
             <button><a href="">Contact Now</a></button>
           </div>
+          <div class="col-lg-5 col-12 my-2">
+            <img src="Images/about.jpg" width="100%" height="400px" alt="">
+          </div>
         </div>
       </div>
     </section>
+
 
     <section class="types py-5">
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h6>INTERLAY INTERIORS</h6>
             <H2>Types of Modular Kitchen</H2>
           </div>
           <div class="col-lg-12 col-12">
@@ -108,8 +111,7 @@
     <section class="gallery">
       <div class="sub-foot">
         <div class="container-fluid">
-          <h6>INTERLAY INTERIORS</h6>
-          <h2 class="pb-3 text-center">Our Works</h2>
+          <h2 class="pb-3 text-center">Our Work</h2>
           <div class="logos">
             <div class="logos-slide">
               <img src="Images/actual-site-1.jpg" />
@@ -144,7 +146,7 @@
             <h2>Average price of Modular Kitchen in Jaipur</h2>
             <p>The average cost of a modular kitchen in Jaipur varies depending on factors such as size, materials used, and design preferences. However, it typically ranges from INR 1.5 lakhs to INR 4 lakhs or more for high-end designs.</p>
             <p><strong>For precise pricing and expert assistance, consider reaching out to Interlay Interiors. We specialize in creating custom modular kitchens in Jaipur tailored to your specific requirements.</strong></p>
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-start">
               <button><a href="">Know More</a></button>
             </div>
           </div>
