--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Interlay-Modular-Kitchen</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="CSS/style.css">
 </head>
 
@@ -59,7 +60,7 @@
     <section class="about-me py-5">
       <div class="container">
         <div class="row">
-          <div class="col-lg-7 col-12">
+          <div class="col-lg-7 col-12" data-aos="fade-right" data-aos-delay="350" data-aos-duration="850">
             <h6>INTERLAY INTERIORS</h6>
             <h2>About Interlay Interiors:</h2>
             <p>At Interlay Interiors, we pride ourselves on being Jaipur's leading exquisite modular kitchen solutions
@@ -68,7 +69,7 @@
               transforming your culinary space into a haven of style and efficiency.</p>
             <button><a href="">Contact Now</a></button>
           </div>
-          <div class="col-lg-5 col-12 my-2">
+          <div class="col-lg-5 col-12 my-2" data-aos="fade-left" data-aos-delay="300" data-aos-duration="800">
             <img src="Images/about.jpg" width="100%" height="400px" alt="">
           </div>
         </div>
@@ -79,27 +80,27 @@
     <section class="types py-5">
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12" data-aos="fade-up" data-aos-delay="250" data-aos-duration="800">
             <H2>Types of Modular Kitchen</H2>
           </div>
           <div class="col-lg-12 col-12">
-            <div class="img-accordion" data-aos="fade-up" data-aos-delay="250" data-aos-duration="800">
-              <div class="img img1">
+            <div class="img-accordion">
+              <div class="img img1" data-aos="fade-up" data-aos-delay=""="250" data-aos-duration="800">
                 <p>Inline Modular Kitchen</p>
               </div>
-              <div class="img img2">
+              <div class="img img2" data-aos="fade-up" data-aos-delay=""="300" data-aos-duration="800">
                 <p>L- Shape Modular Kitchen</p>
               </div>
-              <div class="img img3">
+              <div class="img img3" data-aos="fade-up" data-aos-delay=""="350" data-aos-duration="800">
                 <p>Island Modular Kitchen</p>
               </div>
-              <div class="img img4">
+              <div class="img img4" data-aos="fade-up" data-aos-delay=""="450" data-aos-duration="800">
                 <p>Parallel Modular Kitchen</p>
               </div>
-              <div class="img img5">
+              <div class="img img5" data-aos="fade-up" data-aos-delay=""="500" data-aos-duration="800">
                 <p>U- Shape Modular Kitchen</p>
               </div>
-              <div class="img img6">
+              <div class="img img6" data-aos="fade-up" data-aos-delay=""="550" data-aos-duration="800">
                 <p>Peninsular Modular Kitchen</p>
               </div>
             </div>
@@ -111,7 +112,7 @@
     <section class="gallery">
       <div class="sub-foot">
         <div class="container-fluid">
-          <h2 class="pb-3 text-center">Our Work</h2>
+          <h2 class="pb-3 text-center" data-aos="fade-up" data-aos-delay="250" data-aos-duration="800">Our Work</h2>
           <div class="logos">
             <div class="logos-slide">
               <img src="Images/actual-site-1.jpg" />
@@ -224,6 +225,11 @@
     </div>
   </footer>
 
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
