--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section class="types py-5">
       <div class="container">
         <div class="row">
-          <div class="col-12" data-aos="fade-up" data-aos-delay="250" data-aos-duration="800">
+          <div class="col-12" data-aos="fade-down" data-aos-delay="250" data-aos-duration="800">
             <H2>Types of Modular Kitchen</H2>
           </div>
           <div class="col-lg-12 col-12">
@@ -112,7 +112,7 @@
     <section class="gallery">
       <div class="sub-foot">
         <div class="container-fluid">
-          <h2 class="pb-3 text-center" data-aos="fade-up" data-aos-delay="250" data-aos-duration="800">Our Work</h2>
+          <h2 class="pb-3 text-center" data-aos="fade-down" data-aos-delay="250" data-aos-duration="800">Our Work</h2>
           <div class="logos">
             <div class="logos-slide">
               <img src="Images/actual-site-1.jpg" />
