--- a/index.html
+++ b/index.html
@@ -84,23 +84,23 @@
             <H2>Types of Modular Kitchen</H2>
           </div>
           <div class="col-lg-12 col-12">
-            <div class="img-accordion">
-              <div class="img img1" data-aos="fade-up" data-aos-delay=""="250" data-aos-duration="800">
+            <div class="img-accordion" data-aos="fade-up" data-aos-delay="300" data-aos-duration="850">
+              <div class="img img1">
                 <p>Inline Modular Kitchen</p>
               </div>
-              <div class="img img2" data-aos="fade-up" data-aos-delay=""="300" data-aos-duration="800">
+              <div class="img img2">
                 <p>L- Shape Modular Kitchen</p>
               </div>
-              <div class="img img3" data-aos="fade-up" data-aos-delay=""="350" data-aos-duration="800">
+              <div class="img img3">
                 <p>Island Modular Kitchen</p>
               </div>
-              <div class="img img4" data-aos="fade-up" data-aos-delay=""="450" data-aos-duration="800">
+              <div class="img img4">
                 <p>Parallel Modular Kitchen</p>
               </div>
-              <div class="img img5" data-aos="fade-up" data-aos-delay=""="500" data-aos-duration="800">
+              <div class="img img5">
                 <p>U- Shape Modular Kitchen</p>
               </div>
-              <div class="img img6" data-aos="fade-up" data-aos-delay=""="550" data-aos-duration="800">
+              <div class="img img6">
                 <p>Peninsular Modular Kitchen</p>
               </div>
             </div>
