--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Interlay-Modular-Kitchen</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="CSS/style.css">
 </head>
@@ -25,22 +25,22 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav  mb-lg-0">
             <li class="nav-item mx-3">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="">Gallery</a>
+              <a class="nav-link" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="">FAQ's</a>
+              <a class="nav-link" href="#faq">FAQ's</a>
             </li>
             <li class="nav-item mx-3">
-              <button><a href="">Enquire Now</a></button>
+              <button><a href="#contact">Enquire Now</a></button>
             </li>
           </ul>
         </div>
@@ -49,15 +49,20 @@
   </header>
 
   <main>
+    <div class="ctc-btn">
+      <a href="#contact"><img src="Images/phone-call.png" width="52px" height="52px" alt=""></a>
+    </div>
+
+
     <section class="banner">
-      <div class="container">
+      <div class="container" id="home">
         <h1>Welcome to Interlay Interiors </h1>
         <p>Your Premier Destination for Modular Kitchen Solutions in Jaipur.</p>
-        <button><a href="">Enquire Now</a></button>
+        <button><a href="#contact">Enquire Now</a></button>
       </div>
     </section>
 
-    <section class="about-me py-5">
+    <section class="about-me py-5" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-7 col-12" data-aos="fade-right" data-aos-delay="350" data-aos-duration="850">
@@ -67,19 +72,56 @@
               provider. With years of experience and a passion for design excellence, we specialize in crafting kitchens
               that blend functionality with aesthetics seamlessly. Our expert designers and craftsmen are dedicated to
               transforming your culinary space into a haven of style and efficiency.</p>
-            <button><a href="">Contact Now</a></button>
+            <button><a href="#contact">Contact Now</a></button>
+            <div class="row mt-3">
+              <div class="col-6">
+                <img src="Images/actual-site-5.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="col-6">
+                <img src="Images/actual-site-3.jpg" class="img-fluid" alt="">
+              </div>
+            </div>
           </div>
           <div class="col-lg-5 col-12 my-2" data-aos="fade-left" data-aos-delay="300" data-aos-duration="800">
-            <img src="Images/about.jpg" width="100%" height="400px" alt="">
+            <div class="form-box" id="contact">
+              <h4>Contact Us for Your Dream Kitchen</h4>
+              <p>Ready to elevate your kitchen experience? Contact us today to discuss your project and turn your vision
+              into reality. Fill out the form below and let's embark on this exciting journey together!</p>
+              <form action="">
+                <div class="row mb-3">
+                  <input type="text" class="" placeholder="Full Name">
+                </div>
+                <div class="row mb-3">
+                  <input type="number" class="" placeholder="Phone Number">
+                </div>
+                <div class="row mb-3">
+                  <input type="email" class="" placeholder="Email">
+                </div>
+                <div class="row mb-3">
+                  <select class="form-select" aria-label="Default select example">
+                    <option selected>Modular Kitchen</option>
+                    <option value="1">L- Shape Modular Kitchen</option>
+                    <option value="2">U- Shape Modular Kitchen</option>
+                    <option value="3">Parallel Modular Kitchen</option>
+                    <option value="4">Inline Modular Kitchen</option>
+                    <option value="5">Island Modular Kitchen</option>
+                    <option value="6">Peninsular Modular Kitchen</option>
+                  </select>
+                </div>
+                <div class="row">
+                  <button>Submit</button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
 
-    <section class="types py-5">
+    <section class="types py-5" id="types">
       <div class="container">
-        <div class="row">
+        <div class="row d-none d-sm-none d-md-flex d-lg-flex d-xl-flex">
           <div class="col-12" data-aos="fade-down" data-aos-delay="250" data-aos-duration="800">
             <H2>Types of Modular Kitchen</H2>
           </div>
@@ -106,13 +148,42 @@
             </div>
           </div>
         </div>
+        <div class="row d-flex d-sm-flex d-md-none d-lg-none d-xl-none">
+          <div class="col-12" data-aos="fade-down" data-aos-delay="250" data-aos-duration="800">
+            <H2>Types of Modular Kitchen</H2>
+          </div>
+          <div class="col-12 my-2" data-aos="fade-up" data-aos-delay="250" data-aos-duration="800">
+            <img src="Images/inline-kitchen.jpg" class="img-fluid" alt="">
+            <h5>Inline-Kitchen</h5>
+          </div>
+          <div class="col-12 my-2" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
+            <img src="Images/Island-kitchen.jpg" class="img-fluid" alt="">
+            <h5>Island-Kitchen</h5>
+          </div>
+          <div class="col-12 my-2" data-aos="fade-up" data-aos-delay="350" data-aos-duration="800">
+            <img src="Images/L-shape.jpg" class="img-fluid" alt="">
+            <h5>L-Shape Kitchen</h5>
+          </div>
+          <div class="col-12 my-2" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+            <img src="Images/parallel.jpg" class="img-fluid" alt="">
+            <h5>Parallel Kitchen</h5>
+          </div>
+          <div class="col-12 my-2" data-aos="fade-up" data-aos-delay="450" data-aos-duration="800">
+            <img src="Images/peninsular-kitchen.jpg" class="img-fluid" alt="">
+            <h5>Peninsular-Kitchen</h5>
+          </div>
+          <div class="col-12 my-2" data-aos="fade-up" data-aos-delay="500" data-aos-duration="800">
+            <img src="Images/U-shape.jpg" class="img-fluid" alt="">
+            <h5>U-Shape Kitchen</h5>
+          </div>
+        </div>
       </div>
     </section>
 
-    <section class="gallery">
+    <section class="gallery" id="gallery">
       <div class="sub-foot">
         <div class="container-fluid">
-          <h2 class="pb-3 text-center" data-aos="fade-down" data-aos-delay="250" data-aos-duration="800">Our Work</h2>
+          <h2 class="pb-3 text-center" data-aos="fade-down" data-aos-delay="100" data-aos-duration="800">Our Work</h2>
           <div class="logos">
             <div class="logos-slide">
               <img src="Images/actual-site-1.jpg" />
@@ -140,22 +211,26 @@
       </div>
     </section>
 
-    <section class="pricing py-5">
+    <section class="pricing py-5" id="pricing">
       <div class="container">
         <div class="row">
           <div class="col-12">
             <h2>Average price of Modular Kitchen in Jaipur</h2>
-            <p>The average cost of a modular kitchen in Jaipur varies depending on factors such as size, materials used, and design preferences. However, it typically ranges from INR 1.5 lakhs to INR 4 lakhs or more for high-end designs.</p>
-            <p><strong>For precise pricing and expert assistance, consider reaching out to Interlay Interiors. We specialize in creating custom modular kitchens in Jaipur tailored to your specific requirements.</strong></p>
+            <p>The average cost of a modular kitchen in Jaipur varies depending on factors such as size, materials used,
+              and design preferences. However, it typically ranges from INR 1.5 lakhs to INR 4 lakhs or more for
+              high-end designs.</p>
+            <p><strong>For precise pricing and expert assistance, consider reaching out to Interlay Interiors. We
+                specialize in creating custom modular kitchens in Jaipur tailored to your specific
+                requirements.</strong></p>
             <div class="d-flex justify-content-start">
-              <button><a href="">Know More</a></button>
+              <button><a href="#contact">Know More</a></button>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="faq py-5">
+    <section class="faq py-5" id="faq">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -165,49 +240,60 @@
             <div class="accordion" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
                     What are the benefits of choosing a modular kitchen?
                   </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <p>Modular kitchens offer flexibility in design, efficient use of space, and ease of maintenance compared to traditional kitchens.</p>
+                    <p>Modular kitchens offer flexibility in design, efficient use of space, and ease of maintenance
+                      compared to traditional kitchens.</p>
                   </div>
                 </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     How long does it take to install a modular kitchen?
                   </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <p>The installation time varies depending on the size and complexity of the project. However, our team at Interlay Interiors strives to complete installations promptly without compromising on quality.</p>
+                    <p>The installation time varies depending on the size and complexity of the project. However, our
+                      team at Interlay Interiors strives to complete installations promptly without compromising on
+                      quality.</p>
                   </div>
                 </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     Can I customize my modular kitchen design?
                   </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <p>Absolutely! We understand that every client has unique preferences and requirements. Our designers work closely with you to create a customized modular kitchen design that reflects your personal style and meets your specific needs.</p>
+                    <p>Absolutely! We understand that every client has unique preferences and requirements. Our
+                      designers work closely with you to create a customized modular kitchen design that reflects your
+                      personal style and meets your specific needs.</p>
                   </div>
                 </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
                     Can I customize my modular kitchen design?
                   </button>
                 </h2>
                 <div id="collapsefour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <p>Absolutely! We understand that every client has unique preferences and requirements. Our designers work closely with you to create a customized modular kitchen design that reflects your personal style and meets your specific needs.</p>
+                    <p>Absolutely! We understand that every client has unique preferences and requirements. Our
+                      designers work closely with you to create a customized modular kitchen design that reflects your
+                      personal style and meets your specific needs.</p>
                   </div>
                 </div>
               </div>
