--- a/index.html
+++ b/index.html
@@ -286,14 +286,12 @@
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                    Can I customize my modular kitchen design?
+                    Are modular kitchens durable?
                   </button>
                 </h2>
                 <div id="collapsefour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <p>Absolutely! We understand that every client has unique preferences and requirements. Our
-                      designers work closely with you to create a customized modular kitchen design that reflects your
-                      personal style and meets your specific needs.</p>
+                    <p>Yes, modular kitchens are designed to withstand daily wear and tear. We use high-quality materials and innovative techniques to ensure durability and longevity in every project.</p>
                   </div>
                 </div>
               </div>
